# Sentinel

./: README.md  index.html  package.json  splash.html  vite.config.js
src/: App.jsx  ScriptHubWindow.jsx  SettingsWindow.jsx  Splash.jsx  components.jsx  editor.css  luau.js  main.jsx  splash_main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  console.rs  discord.rs  init.rs  injection.rs  lib.rs  main.rs  roblox.rs  scripts.rs  status.rs  updater.rs  windows.rs
src-tauri/src/scripts/: _sentinel_console.lua
